# toy-gc-code

./: .gitignore  CMakeLists.txt  README.md
marksweep/: CMakeLists.txt  allocator.cpp  allocator.h  test.cpp
src/: CMakeLists.txt  test.cpp
src/include/: exceptions.h
src/include/marksweep/: allocator.h
src/marksweep/: CMakeLists.txt  allocator.cpp
